# TETRA-DS5

./: README.md  TETRA DS_ROS Topic, service정리.xlsx
rviz_visual_tools/: CMakeLists.txt  package.xml
rviz_visual_tools/include/rviz_visual_tools/: remote_reciever.h  rviz_visual_tools.h
rviz_visual_tools/src/: key_tool.cpp  rviz_visual_tools_demo.cpp  rviz_visual_tools_gui.cpp  rviz_visual_tools_gui.h
tetraDS/: CMakeLists.txt  manifest.xml  package.xml
tetraDS/include/: rs232_common.c  rs232_common.h
tetraDS/launch/: tetraDS_configuration.launch
tetraDS/src/: drive_module.c  drive_module.h  dssp_rs232_drive_module.c  dssp_rs232_drive_module.h  tetraDS.cpp
tetraDS/srv/: angular_position_move.srv  linear_position_move.srv  parameter_read.srv  parameter_write.srv  set_move_mode.srv
tetraDS_2dnav/: CMakeLists.txt  gmapping.rviz  mainpage.dox  manifest.xml  package.xml  view_navigation.rviz  view_navigation_odom.rviz
tetraDS_2dnav/config/: base_global_planner_param.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
tetraDS_2dnav/launch/: DepthimageToScan.launch  amcl.launch.xml  cartographer_mapping.launch  gmapping_mapping.launch  move_base_tetra.launch  rgbd.launch  soundplay.launch  teb_move_base.launch  tetra_configuration.launch  timed_rgbd.launch
tetraDS_2dnav/maps/: TEST.pgm  TEST.yaml  office.pgm  office.yaml
tetraDS_2dnav/scripts/: detection_collector.py  detection_publisher.py  publish_fake_random_landmarks.py  robot_global_pose.py  tf_listener.py
tetraDS_TCP/: CMakeLists.txt  package.xml  tetraDS_TCP_프로토콜_220611.xlsx  tetraDS_TCP_프로토콜_220615.xlsx  tetraDS_TCP_프로토콜_230405.xlsx
tetraDS_TCP/launch/: tetraDS_TCP.launch
tetraDS_TCP/src/: tetraDS_TCP.cpp
tetraDS_TCP/srv/: deletelocation.srv  dockingcontrol.srv  get_gpio_status.srv  getlandmarklist.srv  getlocation.srv  gotolocation.srv  gotolocation2.srv  power_set_outport.srv  power_set_single_outport.srv  runmapping.srv  runnavigation.srv  sendmsg.srv  servo.srv  setOutput.srv  setlocation.srv  setmaxspeed.srv  setsavemap.srv  virtual_obstacle.srv
tetraDS_description/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  tetraDS.rviz
tetraDS_description/launch/: display.launch  gazebo.launch  rviz_display.launch  tetraDS_display.launch
tetraDS_description/meshes/: Caster Wheel.STL  Caster Yoke.STL  Platform Body.STL  Platform Body_U.STL  SICK TIM571.STL  Wheel Drive Left.STL  Wheel Drive Right.STL
tetraDS_description/rviz/: rviz.rviz  tetraDS.rviz
tetraDS_description/urdf/tetraDS/: base.urdf.xacro  materials.urdf.xacro  sick_mrs1000.urdf.xacro  sick_tim.urdf.xacro  tetraDS.xacro
tetraDS_description/worlds/: embd.world
tetraDS_description/worlds/embd/: model.config  model.sdf
tetraDS_interface/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
tetraDS_interface/include/: rs232.c  rs232.h  rs232_common.c  rs232_common.h
tetraDS_interface/launch/: tetraDS_interface_configuration.launch
tetraDS_interface/msg/: GPIO.msg
tetraDS_interface/src/: .tetra_ds4.cpp.swp  dssp_rs232_power_module.c  dssp_rs232_power_module.h  power_module.c  power_module.h  tetraDS_interface.cpp
tetraDS_interface/srv/: Integrallog.srv  conveyor_auto_movement.srv  conveyor_data_read.srv  conveyor_manual_movement.srv  conveyor_parameter_read.srv  conveyor_parameter_write.srv  get_gpio_status.srv  loadcell_callibration.srv  power_adc_read.srv  power_data_read.srv  power_get_io_status.srv  power_parameter_read.srv  power_parameter_write.srv  power_set_enable.srv  power_set_single_outport.srv  power_sonar_cmd.srv  power_sonar_read.srv  power_version_read.srv  power_wheel_enable.srv
tetraDS_landmark/: CMakeLists.txt  package.xml
tetraDS_landmark/src/: tetraDS_landmark_load.cpp  tetraDS_landmark_save.cpp
tetraDS_landmark/srv/: savemark.srv
tetraDS_service/: CMakeLists.txt  package.xml
tetraDS_service/msg/: Obstacles.msg  Obstacles2.msg  Zone2.msg
tetraDS_service/src/: tetraDS_service.cpp
tetraDS_service/srv/: accelerationslop.srv  all_data_reset.srv  deletedataall.srv  deletelandmark.srv  deletemap.srv  euler_angle_init.srv  euler_angle_reset.srv  getinformation.srv  getlocationlist.srv  getmaplist.srv  gotocancel.srv  gotoconveyor.srv  ledcontrol.srv  ledtogglecontrol.srv  loadingcheck.srv  patrol.srv  patrol_conveyor.srv  pose_estimate.srv  pose_velocity_reset.srv  reboot_sensor.srv  rosnodekill.srv  setekf  setekf.srv  sethome_id.srv  setinitpose.srv  toggleon.srv  unloadingcheck.srv  virtual_obstacle.srv  virtual_obstacle2.srv
virtual_costmap_layer/: CMakeLists.txt  package.xml
virtual_costmap_layer/include/virtual_costmap_layer/: virtual_layer.hpp
virtual_costmap_layer/msg/: Zone.msg
virtual_costmap_layer/src/: virtual_layer.cpp
virtual_costmap_layer2/: CMakeLists.txt  costmap_plugins2.xml  package.xml
virtual_costmap_layer2/cfg/: VirtualLayer2.cfg
virtual_costmap_layer2/include/virtual_costmap_layer2/: virtual_layer2.hpp
virtual_costmap_layer2/msg/: Form2.msg
virtual_costmap_layer2/src/: virtual_layer2.cpp
