<?xml version="1.0"?>
<package format="2">
  <name>tetraDS_2dnav</name>
  <version>0.0.1</version>
  <description>The tetraDS_2dnav package</description>


  <maintainer email="wbjin@hyulimrobot.com">Jinwookbin</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>

  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <!-- message generation -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- other dependencies -->
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
