<?xml version="1.0"?>
<package format="2">
  <name>tetraDS_description</name>
  <version>0.0.1</version>
  <description>The tetraDS_description package</description>


  <maintainer email="wbjin@hyulimrobot.com">Jinwookbin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
