<?xml version="1.0"?>
<package format="2">
  <name>tetraDS_landmark</name>
  <version>0.0.0</version>
  <description>The tetraDS_landmark package</description>

  <author email="wbjin@hyulimrobot.com">wbjin</author>
  <maintainer email="wbjin@hyulimrobot.com">wbjin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

 <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
